--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-color: #6d92dc;
+  background-color: whitesmoke;
   text-transform: capitalize;
 }
 img {
@@ -9,21 +9,8 @@ img {
   height: 200px;
 }
 
-.gradient-custom {
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 1),
-    rgba(255, 236, 210, 1)
-  );
-}
-
-.carousel-indicators li {
-  background-color: #282828;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-}
-
-section {
-  background-color: #6687ca;
+/* !SIDEBAR */
+#sidebar {
+  height: 100vh;
+  width: 250px;
 }
