--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,224 +1,2 @@
-<shared-nav-bar></shared-nav-bar>
-
-<!-- <div class="container">
-  <div class="row mt-5">
-    <div class="col-sm-12">
-      <div
-        class="card text-bg-dark mb-3"
-        style="max-width: 30rem; height: 500px"
-      >
-        <div class="card-header">Temperature</div>
-        <div class="card-body">
-          <h5 class="card-title">New York</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <router-outlet></router-outlet>
-</div> -->
-
-<div class="container">
-  <!-- !SEARCH BAR -->
-
-  <shared-search-bar
-    barPlaceholder="Enter a specific capital..."
-    (onValue)="searchByCountry($event)"
-  ></shared-search-bar>
-  <!-- !CARDS -->
-  <section class="">
-    <div class="container py-5 h-100">
-      <div
-        class="row d-flex justify-content-center align-items-center h-100"
-        style="color: #282828"
-      >
-        <div class="col-md-9 col-lg-7 col-xl-5">
-          <div class="card mb-4 gradient-custom" style="border-radius: 25px">
-            <div class="card-body p-4">
-              <div id="demo1" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ul class="carousel-indicators mb-0">
-                  <li
-                    data-target="#demo1"
-                    data-slide-to="0"
-                    class="active"
-                  ></li>
-                  <li data-target="#demo1" data-slide-to="1"></li>
-                  <li data-target="#demo1" data-slide-to="2"></li>
-                </ul>
-                <!-- Carousel inner -->
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div class="d-flex justify-content-between mb-4 pb-2">
-                      <div>
-                        <h2 class="display-2"><strong>23°C</strong></h2>
-                        <p class="text-muted mb-0">Coimbra, Portugal</p>
-                      </div>
-                      <div>
-                        <img
-                          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-weather/ilu3.webp"
-                          width="150px"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card mb-4" style="border-radius: 25px">
-            <div class="card-body p-4">
-              <div id="demo2" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ul class="carousel-indicators mb-0">
-                  <li data-target="#demo2" data-slide-to="0"></li>
-                  <li
-                    data-target="#demo2"
-                    data-slide-to="1"
-                    class="active"
-                  ></li>
-                  <li data-target="#demo2" data-slide-to="2"></li>
-                </ul>
-                <!-- Carousel inner -->
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div
-                      class="d-flex justify-content-around text-center mb-4 pb-3 pt-2"
-                    >
-                      <div class="flex-column">
-                        <p class="small"><strong>21°C</strong></p>
-                        <i
-                          class="fas fa-sun fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>12:00</strong></p>
-                        <p class="mb-0 text-muted" style="font-size: 0.65rem">
-                          PM
-                        </p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>2°C</strong></p>
-                        <i
-                          class="fas fa-sun fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>1:00</strong></p>
-                        <p class="mb-0 text-muted" style="font-size: 0.65rem">
-                          PM
-                        </p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>20°C</strong></p>
-                        <i
-                          class="fas fa-cloud fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>2:00</strong></p>
-                        <p class="mb-0 text-muted" style="font-size: 0.65rem">
-                          PM
-                        </p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>19°C</strong></p>
-                        <i
-                          class="fas fa-cloud fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>3:00</strong></p>
-                        <p class="mb-0 text-muted" style="font-size: 0.65rem">
-                          PM
-                        </p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>18°C</strong></p>
-                        <i
-                          class="fas fa-cloud-showers-heavy fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>4:00</strong></p>
-                        <p class="mb-0 text-muted" style="font-size: 0.65rem">
-                          PM
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card" style="border-radius: 25px">
-            <div class="card-body p-4">
-              <div id="demo3" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ul class="carousel-indicators mb-0">
-                  <li data-target="#demo3" data-slide-to="0"></li>
-                  <li data-target="#demo3" data-slide-to="1"></li>
-                  <li
-                    data-target="#demo3"
-                    data-slide-to="2"
-                    class="active"
-                  ></li>
-                </ul>
-                <!-- Carousel inner -->
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div
-                      class="d-flex justify-content-around text-center mb-4 pb-3 pt-2"
-                    >
-                      <div class="flex-column">
-                        <p class="small"><strong>21°C</strong></p>
-                        <i
-                          class="fas fa-sun fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>Mon</strong></p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>20°C</strong></p>
-                        <i
-                          class="fas fa-sun fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>Tue</strong></p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>16°C</strong></p>
-                        <i
-                          class="fas fa-cloud fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>Wed</strong></p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>17°C</strong></p>
-                        <i
-                          class="fas fa-cloud fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>Thu</strong></p>
-                      </div>
-                      <div class="flex-column">
-                        <p class="small"><strong>18°C</strong></p>
-                        <i
-                          class="fas fa-cloud-showers-heavy fa-2x mb-3"
-                          style="color: #ddd"
-                        ></i>
-                        <p class="mb-0"><strong>Fri</strong></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
+<p>hello from app</p>
+<router-outlet></router-outlet>
