before api call, included interface

--- a/src/app/main/main-layout/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/main-layout/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -1,6 +1,7 @@
-<p>weather-info-main-page works!</p>
-
 <div class="d-flex">
   <component-sidebar-weather></component-sidebar-weather>
-  <component-main-content-weather></component-main-content-weather>
+  <!-- * col-12 gives full extend length to that component. if needed, edit sizes inside component!  -->
+  <component-main-content-weather
+    class="col-12"
+  ></component-main-content-weather>
 </div>
