--- a/src/app/main/components/main-content-weather/main-content-weather.component.html
+++ b/src/app/main/components/main-content-weather/main-content-weather.component.html
@@ -1,14 +1,28 @@
-<p>main-content-weather works!</p>
-
 <div class="row p-3">
-  <div class="col-12">
+  <div class="col-12 col-md-6 col-lg-7">
     <!-- TODO: add searchBar -->
-    <p>search bar goes here</p>
+    <shared-search-bar
+      barPlaceholder="Search a City..."
+      (onValue)="searchCityWeather($event)"
+    ></shared-search-bar>
     <hr />
   </div>
 
   <div class="col-12 pt-2">
     <!-- TODO: add upcoming hours -->
     <p>upcoming hours</p>
+    <!-- ! CARD -->
+    <div class="card bg-light" style="width: 18rem">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
   </div>
 </div>
