--- a/src/app/main/components/sidebar-weather/sidebar-weather.component.html
+++ b/src/app/main/components/sidebar-weather/sidebar-weather.component.html
@@ -1,7 +1,7 @@
 <!-- ! SIDEBAR -->
-<div class="bg-dark border-right p-3" id="sidebar">
-  <h3 class="text-light">Berlin</h3>
-  <hr class="text-light" />
+<div class="bg-light border-right p-3" id="sidebar">
+  <h3 class=>Berlin</h3>
+  <hr />
 
   <div class="list-group list-reset">
     <button class="list-group-item list-group-item-action">something</button>
