add getFiveDayForecast method

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,59 @@
+<h1>hallo welt</h1>
+
+<div class="container">
+  <div class="row g-3">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card">
+        <img
+          class="card-img-top"
+          src="../assets/images/europe.jpg"
+          alt="europe"
+        />
+        <div class="card-body">
+          <h5 class="card-title">a street in europe</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            minima at illum nostrum consectetur dolores corporis culpa omnis
+            facere. Ex!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card">
+        <img
+          class="card-img-top"
+          src="../assets/images/europe.jpg"
+          alt="europe"
+        />
+        <div class="card-body">
+          <h5 class="card-title">a street in europe</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            minima at illum nostrum consectetur dolores corporis culpa omnis
+            facere. Ex!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card">
+        <img
+          class="card-img-top"
+          src="../assets/images/europe.jpg"
+          alt="europe"
+        />
+        <div class="card-body">
+          <h5 class="card-title">a street in europe</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            minima at illum nostrum consectetur dolores corporis culpa omnis
+            facere. Ex!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
