--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,7 @@ img {
   height: 120px;
 }
 
-/* !SIDEBAR */
-#sidebar {
-  height: 100vh;
+.sidebar-container {
+  /* height: 100vh; */
   width: 250px;
 }
