--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -57,23 +57,7 @@
   <div class="main-container col-12 col-md-6 col-lg-4">
     <div class="row p-3">
       <div class="col-12 pt-2">
-        <!-- TODO: add upcoming hours -->
-        <p>upcoming hours</p>
-        <!-- ! CARD -->
-        <div class="card bg-light" style="width: 18rem">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">
-              Card subtitle
-            </h6>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
+        <app-five-day-forecast-page></app-five-day-forecast-page>
       </div>
     </div>
   </div>
