--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -53,7 +53,32 @@
   <div class="main-container col-12 col-md-6 col-lg-4">
     <div class="row p-3">
       <div class="col-12 pt-2">
+        <!-- ! 5 Day Forecast -->
+
         <app-five-day-forecast-page></app-five-day-forecast-page>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="main-container col-12 col-md-6 col-lg-4">
+  <div class="row p-3">
+    <div class="col-12 pt-2">
+      <!-- ! 3 Day Forecast -->
+      <div
+        *ngFor="let item of timeline"
+        class="card text-bg-light mb-3"
+        style="max-width: 18rem"
+      >
+        <div class="card-header">{{ item.time | date : "HH:mm" }}</div>
+        <div class="card-body">
+          <h5 class="card-title">{{ item.temp | number : "1.0-0" }}°C</h5>
+          <img class="img-size" src="{{ item.icon | weatherImg }}" alt="" />
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
       </div>
     </div>
   </div>
