--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,9 @@ img {
   /* height: 100vh; */
   width: 250px;
 }
+
+.three-day-con {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
