implement 5 day forecast

--- a/src/app/main/pages/five-day-forecast-page/five-day-forecast-page.component.html
+++ b/src/app/main/pages/five-day-forecast-page/five-day-forecast-page.component.html
@@ -17,36 +17,27 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">temp</th>
+      <th scope="col"></th>
       <th scope="col">date</th>
       <th scope="col">day of the week</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>25</td>
-      <td>17 april</td>
-      <td>friday</td>
-    </tr>
-    <tr>
-      <td>25</td>
-      <td>17 april</td>
-      <td>friday</td>
-    </tr>
-    <tr>
-      <td>25</td>
-      <td>17 april</td>
-      <td>friday</td>
-    </tr>
-    <tr>
-      <td>25</td>
-      <td>17 april</td>
-      <td>friday</td>
-    </tr>
-    <tr>
-      <td>25</td>
-      <td>17 april</td>
-      <td>friday</td>
+    <tr *ngFor="let forecast of fetched5dayWeatherData">
+      <td>
+        {{ forecast.main.temp | number : "1.0-0" }} °C
+        <img
+          class="img-size"
+          src="{{ forecast.weather![0].icon | weatherImg }}"
+          alt=""
+        />
+      </td>
+      <td>
+        {{ forecast.dt_txt | date : "EEE, MMM dd" }}
+      </td>
+      <td>
+        {{ forecast.dt_txt | date : "EEE" }}
+      </td>
     </tr>
   </tbody>
 </table>
