--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row g-3">
-    <div class="col-12 col-md-6 col-lg-4">
+    <!-- <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
         <img
           class="card-img-top"
@@ -18,7 +18,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
         <img
