--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -18,16 +18,13 @@
           <a
             class="nav-link"
             aria-current="page"
-            routerLink="home"
+            routerLink="main"
             routerLinkActive="active"
             >Home</a
           >
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink="../main/about"
-            routerLinkActive="active"
+          <a class="nav-link" routerLink="about" routerLinkActive="active"
             >about</a
           >
         </li>
