add lorem ipsum to about page

--- a/src/app/main/pages/about-page/about-page.component.html
+++ b/src/app/main/pages/about-page/about-page.component.html
@@ -1,1 +1,23 @@
-<p>about-page works!</p>
+<div class="container mt-5">
+  <h2>about our weather app</h2>
+  <p>
+    Sint non nulla proident laborum nostrud in est nostrud reprehenderit. Dolor
+    do irure ex dolor non occaecat aliqua ullamco proident. Ex adipisicing
+    mollit ullamco ex sunt. Anim esse mollit occaecat reprehenderit minim in
+    cillum aliqua non laborum irure anim. Occaecat esse reprehenderit excepteur
+    ut ea amet magna enim esse eu irure quis deserunt nostrud. Velit magna
+    adipisicing elit labore ipsum esse fugiat aliqua eu irure reprehenderit
+    commodo ad do. Esse amet deserunt cillum sit consectetur voluptate eu
+    pariatur consequat eu do nulla. Eiusmod sit id id excepteur nisi sunt ea
+    sunt nulla consectetur proident. Eiusmod dolor nulla laboris consequat sunt.
+    Cupidatat voluptate ipsum non laborum. Officia duis nostrud fugiat in.
+    Cillum laboris id cillum veniam reprehenderit mollit. Est cupidatat Lorem
+    consectetur nulla exercitation commodo dolor sit. Reprehenderit minim nulla
+    sunt sint exercitation eu voluptate. Eiusmod laboris veniam nulla cupidatat
+    irure adipisicing incididunt occaecat amet ea mollit exercitation. Non qui
+    est officia eiusmod duis ipsum excepteur eiusmod quis proident cillum ex
+    culpa. Amet eu nisi occaecat proident nisi est deserunt irure pariatur est
+    ad laborum. Minim laborum veniam esse laboris amet duis. Lorem est nisi esse
+    laboris aliquip occaecat exercitation elit esse.
+  </p>
+</div>
