fix 5 day forecast

--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -3,7 +3,7 @@
     <!-- ! SEARCHBAR -->
     <shared-search-bar
       barPlaceholder="Search a City..."
-      (onValue)="searchCityWeather($event)"
+      (onValue)="searchByCity($event)"
     ></shared-search-bar>
     <hr />
   </div>
@@ -26,6 +26,7 @@
       <div class="border-right p-3" id="sidebar">
         <h3>{{ location.name }}</h3>
         <hr />
+        <!-- TODO: REFACTOR INTO OWN COMPONENT: -->
 
         <!-- ! SIDEBAR-WEATHER-INFO -->
         <div
@@ -53,7 +54,7 @@
         </div>
       </div>
     </div>
-
+    <!-- TODO: REFACTOR INTO OWN COMPONENT: -->
     <!-- ! 3 Day Forecast -->
 
     <h5 class="p-4">3 hour forecast:</h5>
@@ -80,9 +81,40 @@
     <div class="col-12 col-md-6 col-lg-4">
       <div class="row p-3">
         <div class="col-12 pt-2">
+          <!-- TODO: REFACTOR INTO OWN COMPONENT: -->
           <!-- ! 5 Day Forecast -->
+          <h5>5 day forecast</h5>
 
-          <app-five-day-forecast-page></app-five-day-forecast-page>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Temperature</th>
+                <th scope="col">Condition</th>
+                <th scope="col">date</th>
+                <th scope="col">day of the week</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let forecast of fetched5dayWeatherData">
+                <td>
+                  {{ forecast.main.temp | number : "1.0-0" }} °C
+                  <img
+                    class="img-size"
+                    src="{{ forecast.weather![0].icon | weatherImg }}"
+                    alt=""
+                  />
+                </td>
+                <td>{{ forecast.weather![0].main }}</td>
+                <td>
+                  {{ forecast.dt_txt | date : "EEE, MMM dd" }}
+                </td>
+                <td>
+                  {{ forecast.dt_txt | date : "EEE" }}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- ! -->
         </div>
       </div>
     </div>
