--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-color: whitesmoke;
+  background-color: lightblue;
   text-transform: capitalize;
 }
 img {
