create components for refactorization

--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -28,7 +28,7 @@
         <hr />
         <!-- TODO: REFACTOR INTO OWN COMPONENT: -->
 
-        <!-- ! SIDEBAR-WEATHER-INFO -->
+        <!-- ! MAIN-CARD-WEATHER-INFO -->
         <div
           class="card text-center text-bg-dark mb-3 align-items-center"
           style="max-width: 18rem"
