--- a/src/app/main/components/five-day-forecast/five-day-forecast.component.html
+++ b/src/app/main/components/five-day-forecast/five-day-forecast.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table table-striped text-center">
   <thead>
     <tr>
       <th scope="col">Temperature</th>
