--- a/src/app/main/components/main-card/main-card.component.html
+++ b/src/app/main/components/main-card/main-card.component.html
@@ -1,8 +1,8 @@
 <div
-  class="card text-center text-bg-dark mb-3 align-items-center"
-  style="max-width: 18rem"
+  class="card text-center text-bg mb-3 align-items-center"
+  style="width: 22rem"
 >
-  <div class="card-header">Now</div>
+  <div class="card-header" style="width: 22rem">Now</div>
   <img
     class="img-size"
     src="{{ weatherNow.weather![0].icon | weatherImg }}"
