--- a/src/app/main/components/three-day-forecast/three-day-forecast.component.html
+++ b/src/app/main/components/three-day-forecast/three-day-forecast.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap justify-content-center">
   <div
     *ngFor="let item of timelineForOneDay"
-    class="card text-bg-light m-2"
+    class="card text-bg m-2"
     style="max-width: 10rem"
   >
     <div class="card-header">
